--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
-Left off writing the table for dashboard events
+Left off having fetched the event to update in update event.
+need to add values to the fields so they autopopulate.
